[gd_scene load_steps=12 format=3 uid="uid://khmvepfimu75"]

[ext_resource type="Script" path="res://main.gd" id="1_cn7dx"]
[ext_resource type="PackedScene" uid="uid://x86ovpu14wbp" path="res://player.tscn" id="1_m10mj"]
[ext_resource type="PackedScene" uid="uid://cej0wkhmw26eb" path="res://mob.tscn" id="2_007to"]
[ext_resource type="FontFile" uid="uid://bag6rla8288nh" path="res://fonts/Montserrat-Medium.ttf" id="4_slqdt"]
[ext_resource type="Script" path="res://ScoreLabel.gd" id="5_3wp5t"]

[sub_resource type="BoxShape3D" id="BoxShape3D_v7j3f"]
size = Vector3(60, 2, 60)

[sub_resource type="BoxMesh" id="BoxMesh_nx8je"]
size = Vector3(60, 2, 60)

[sub_resource type="CylinderMesh" id="CylinderMesh_k8d6t"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_k64g3"]
albedo_color = Color(0.666667, 0.345098, 0, 1)

[sub_resource type="Curve3D" id="Curve3D_den42"]
_data = {
"points": PackedVector3Array(0, 0, 0, 0, 0, 0, -12.9896, 0, 14.5307, 0, 0, 0, 0, 0, 0, -13.0996, 0, -14.7509, 0, 0, 0, 0, 0, 0, 14.7509, 0, -14.6408, 0, 0, 0, 0, 0, 0, 14.8609, 0, 14.5307, 0, 0, 0, 0, 0, 0, -12.9896, 0, 14.5307),
"tilts": PackedFloat32Array(0, 0, 0, 0, 0)
}
point_count = 5

[sub_resource type="Theme" id="Theme_hnq2i"]
default_font = ExtResource("4_slqdt")
default_font_size = 22

[node name="Main" type="Node"]
script = ExtResource("1_cn7dx")
mob_scene = ExtResource("2_007to")

[node name="Ground" type="StaticBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 0)
collision_layer = 4
collision_mask = 0

[node name="CollisionShape3D" type="CollisionShape3D" parent="Ground"]
shape = SubResource("BoxShape3D_v7j3f")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Ground"]
mesh = SubResource("BoxMesh_nx8je")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.0551245, 0.998479, 0, -0.998479, 0.0551245, 0, 14.4871, 0)
shadow_enabled = true

[node name="Player" parent="." instance=ExtResource("1_m10mj")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 6.78694, 0)

[node name="CameraPivot" type="Marker3D" parent="."]
transform = Transform3D(1, -5.95416e-16, 2.4663e-16, 2.4663e-16, 0.707107, 0.707107, -5.95416e-16, -0.707107, 0.707107, 2.08165e-12, 20, 19)

[node name="Camera3D" type="Camera3D" parent="CameraPivot"]
transform = Transform3D(1, 2.67794e-23, -2.67794e-23, -1.06546e-23, 1, -7.57478e-09, 1.06546e-23, -7.57478e-09, 1, 0, 0, 0)
projection = 1
size = 19.0
far = 100.0

[node name="Cylinders" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.35928, 0)

[node name="MeshInstance3D" type="MeshInstance3D" parent="Cylinders"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 14.6408, 0, 13.9803)
mesh = SubResource("CylinderMesh_k8d6t")
surface_material_override/0 = SubResource("StandardMaterial3D_k64g3")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="Cylinders"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 14.6408, 0, -15.0811)
mesh = SubResource("CylinderMesh_k8d6t")
surface_material_override/0 = SubResource("StandardMaterial3D_k64g3")

[node name="MeshInstance3D3" type="MeshInstance3D" parent="Cylinders"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -13.2097, 0, 13.9803)
mesh = SubResource("CylinderMesh_k8d6t")
surface_material_override/0 = SubResource("StandardMaterial3D_k64g3")

[node name="MeshInstance3D4" type="MeshInstance3D" parent="Cylinders"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -13.2097, 0, -15.0811)
mesh = SubResource("CylinderMesh_k8d6t")
surface_material_override/0 = SubResource("StandardMaterial3D_k64g3")

[node name="SpawnPath" type="Path3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.08165e-12, 10, 2.08165e-12)
curve = SubResource("Curve3D_den42")

[node name="SpawnLocation" type="PathFollow3D" parent="SpawnPath"]
transform = Transform3D(0.999992, 0, 0.00375949, 0, 1, 0, -0.00375949, 0, 0.999992, -12.9896, 0, 14.5307)

[node name="MobTimer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="UserInterface" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_hnq2i")

[node name="ScoreLabel" type="Label" parent="UserInterface"]
layout_mode = 0
offset_left = 25.0
offset_top = 20.0
offset_right = 86.0
offset_bottom = 46.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Score: 0"
script = ExtResource("5_3wp5t")

[node name="Retry" type="ColorRect" parent="UserInterface"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.376471)

[node name="RetryLabel" type="Label" parent="UserInterface/Retry"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -110.0
offset_top = -15.5
offset_right = 110.0
offset_bottom = 15.5
grow_horizontal = 2
grow_vertical = 2
text = "Press Enter to Retry"

[connection signal="hit" from="Player" to="." method="_on_player_hit"]
[connection signal="timeout" from="MobTimer" to="." method="_on_timer_timeout"]
